--- a/login.html
+++ b/login.html
@@ -2,12 +2,12 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
-    <title>Login - Pa'lintasang Data</title>
+    <title>Login – Pa'lintasang Data</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Tailwind -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <style>
         body { font-family: 'Plus Jakarta Sans', sans-serif; }
@@ -22,17 +22,26 @@
     <!-- LEFT -->
     <div class="md:w-1/2 hero-gradient p-12 text-white flex flex-col justify-between">
         <div>
-            <h1 class="font-bold text-xl uppercase">PA'LINTASANG <span class="text-amber-400">DATA</span></h1>
-            <h2 class="text-3xl font-extrabold italic mt-6">Selamat<br><span class="text-amber-400">Datang Kembali</span></h2>
-            <p class="text-sm mt-4 text-blue-100">Sistem data transportasi Kota Makassar</p>
+            <h1 class="font-bold text-xl uppercase">
+                PA'LINTASANG <span class="text-amber-400">DATA</span>
+            </h1>
+            <h2 class="text-3xl font-extrabold italic mt-6">
+                Selamat<br><span class="text-amber-400">Datang Kembali</span>
+            </h2>
+            <p class="text-sm mt-4 text-blue-100">
+                Sistem data transportasi dan lalu lintas
+            </p>
         </div>
         <p class="text-xs opacity-60">© 2026 Dinas Perhubungan</p>
     </div>
 
     <!-- RIGHT -->
     <div class="md:w-1/2 p-10 md:p-16">
+
         <h3 class="text-2xl font-bold text-blue-900 mb-2">Login Portal</h3>
-        <p class="text-xs text-slate-400 mb-8">Gunakan NIP resmi Anda</p>
+        <p class="text-xs text-slate-400 mb-8">
+            Gunakan NIP dan password resmi Anda
+        </p>
 
         <form id="loginForm" class="space-y-6">
 
@@ -40,7 +49,7 @@
                 <label class="text-[10px] font-bold uppercase text-slate-400">NIP</label>
                 <div class="relative">
                     <i class="fas fa-user absolute left-4 top-1/2 -translate-y-1/2 text-slate-300"></i>
-                    <input id="usernameInput" type="text"
+                    <input id="nip" type="text" required
                         class="w-full pl-12 py-3 rounded-2xl bg-slate-50 border outline-none focus:border-blue-500"
                         placeholder="Masukkan NIP">
                 </div>
@@ -50,18 +59,20 @@
                 <label class="text-[10px] font-bold uppercase text-slate-400">Password</label>
                 <div class="relative">
                     <i class="fas fa-lock absolute left-4 top-1/2 -translate-y-1/2 text-slate-300"></i>
-                    <input id="passwordInput" type="password"
+                    <input id="password" type="password" required
                         class="w-full pl-12 py-3 rounded-2xl bg-slate-50 border outline-none focus:border-blue-500"
-                        placeholder="P@ssXXXX">
+                        placeholder="••••••••">
                 </div>
             </div>
 
             <button type="submit"
-                class="w-full bg-blue-900 text-white py-4 rounded-2xl text-xs font-bold uppercase tracking-widest hover:bg-blue-800">
+                class="w-full bg-blue-900 text-white py-4 rounded-2xl text-xs font-bold uppercase tracking-widest hover:bg-blue-800 transition">
                 Masuk Sekarang <i class="fas fa-arrow-right ml-2"></i>
             </button>
 
         </form>
+
+        <p id="errorMsg" class="text-xs text-red-600 mt-4 hidden text-center"></p>
 
         <p class="text-[10px] text-center mt-8 text-slate-400">
             Belum punya akses? <b>Hubungi Admin IT</b>
@@ -71,62 +82,51 @@
 
 <!-- ================= SCRIPT ================= -->
 <script>
-const SHEET_URL = 'https://docs.google.com/spreadsheets/d/1dcXe0rQxokqm_Cd7bGLSqAMgO3iOXzYK7akP4S2XeY0/edit?usp=sharing';
-let users = {};
+const WEB_APP_URL = 'https://script.google.com/macros/s/XXXXXXXX/exec';
 
-function makePassword(nip) {
-    return 'P@ss' + String(nip).slice(-4);
-}
+const form = document.getElementById('loginForm');
+const errorMsg = document.getElementById('errorMsg');
 
-async function loadUsers() {
-    const res = await fetch(SHEET_URL);
-    const text = await res.text();
-    const rows = text.trim().split('\n').slice(1);
-
-    rows.forEach(r => {
-        const c = r.split(',');
-        const nip = c[0]?.trim();
-        const nama = c[1]?.trim();
-        const role = c[2]?.trim();
-        const status = c[3]?.trim();
-
-        if (nip && status === 'Aktif') {
-            users[nip] = { nama, role };
-        }
-    });
-}
-
-document.getElementById('loginForm').addEventListener('submit', async e => {
+form.addEventListener('submit', async (e) => {
     e.preventDefault();
+    errorMsg.classList.add('hidden');
 
-    if (Object.keys(users).length === 0) await loadUsers();
+    const nip = document.getElementById('nip').value.trim();
+    const password = document.getElementById('password').value.trim();
 
-    const nip = usernameInput.value.trim();
-    const pass = passwordInput.value.trim();
+    try {
+        const res = await fetch(WEB_APP_URL, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ nip, password })
+        });
 
-    if (!users[nip]) {
-        alert('Akun tidak ditemukan / tidak aktif');
-        return;
-    }
+        const data = await res.json();
 
-    if (pass !== makePassword(nip)) {
-        alert('Password salah');
-        return;
-    }
+        if (!data.success) {
+            errorMsg.textContent = 'Login gagal. NIP atau password salah.';
+            errorMsg.classList.remove('hidden');
+            return;
+        }
 
-    localStorage.setItem('pd_login', 'true');
-    localStorage.setItem('pd_nip', nip);
-    localStorage.setItem('pd_nama', users[nip].nama);
-    localStorage.setItem('pd_role', users[nip].role);
+        // Session (lebih aman daripada localStorage)
+        sessionStorage.setItem('pd_login', 'true');
+        sessionStorage.setItem('pd_nip', data.nip);
+        sessionStorage.setItem('pd_nama', data.nama);
+        sessionStorage.setItem('pd_role', data.role);
 
-    if (users[nip].role === 'Admin') {
-        window.location.href = 'admin.html';
-    } else {
-        window.location.href = 'dashboard.html';
+        // Redirect berdasarkan role
+        if (data.role === 'Admin') {
+            window.location.href = 'admin.html';
+        } else {
+            window.location.href = 'dashboard.html';
+        }
+
+    } catch (err) {
+        errorMsg.textContent = 'Server tidak merespons. Coba lagi.';
+        errorMsg.classList.remove('hidden');
     }
 });
-
-loadUsers();
 </script>
 
 </body>
